<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="285dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        app:srcCompat="@drawable/bghome" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="140dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="108dp"
        app:srcCompat="@drawable/maskgroup1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="269dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="66dp"
        android:layout_marginBottom="51dp"
        android:text="@string/nama"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="194dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="105dp"
        android:layout_marginBottom="-25dp"
        android:text="@string/headingslide2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/judulinteres"
        android:layout_width="194dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="-205dp"
        android:text="@string/INTERES"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="24dp" />

    <TextView
        android:id="@+id/isi_biodata"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-1dp"
        android:layout_marginBottom="209dp"
        android:text="@string/biodata"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/isi_interes"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="25dp"
        android:text="@string/isiinteres"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="17dp"
        android:text="@string/back" />

</RelativeLayout>